--- a/assets/style.css
+++ b/assets/style.css
@@ -5,3 +5,88 @@
 .work-sans-font {
   font-family: "Work Sans", sans-serif;
 }
+
+/* Shared Styles  */
+.display-flex{
+    display: flex;
+}
+
+.text-gray{
+    color: #424242;
+}
+
+.text-light-gray{
+    color: #727272;
+}
+
+.bg-light{
+    background-color: rgba(255, 144, 14, 0.1);
+}
+
+.btn-primary{
+    background-color: #ff900e;
+    color: white;
+    padding: 20px 25px;
+    border: none;
+    font-size: 1.25rem;
+    font-weight: 600;
+    border-radius: 8px;
+}
+/* Main styles  */
+
+/* Navbar Related Styles  */
+
+.navbar{
+   justify-content: space-between;
+    align-items: center;
+}
+
+.brand{
+    font-weight: 700;
+    font-size: 2.8rem;
+}
+.nav-link{
+   
+}
+
+.nav-item{
+    list-style: none;
+    margin-right: 30px;
+}
+.nav-link{
+    text-decoration: none;
+    font-weight: 500;
+    color: ;
+}
+
+.navbar, .banner{
+    max-width: 1440px;
+    margin: 0 auto;
+}
+
+/* Banner related styles */
+
+.banner-content{
+    max-width: 850px;
+    margin: 0 auto;
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+.banner-title{
+    font-weight: 700;
+    font-size: 4rem;
+}
+
+.banner-image{
+    width: 100%;
+}
+
+
+/* Responsive media query */
+
+@media screen and (max-width: 576px) {
+    .navbar, .nav-link{
+        flex-direction: column;
+    }
+}
