--- a/assets/style.css
+++ b/assets/style.css
@@ -7,6 +7,14 @@
 }
 
 /* Shared Styles  */
+main{
+    max-width: 1440px;
+    margin: 0 auto;
+}
+
+main > section{
+    margin-top: 130px;
+}
 .display-flex{
     display: flex;
 }
@@ -46,7 +54,9 @@
     font-size: 2.8rem;
 }
 .nav-link{
-   
+   line-height: 26px;
+   color: rgba(66, 66, 66, 1);
+   font-size: 1.1rem;
 }
 
 .nav-item{
@@ -82,11 +92,35 @@
     width: 100%;
 }
 
+/* Team and Features */
 
+.teams{
+    align-items: center;
+}
+
+.team-img-container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 24px;
+}
 /* Responsive media query */
 
 @media screen and (max-width: 576px) {
     .navbar, .nav-link{
         flex-direction: column;
     }
+}
+
+.our-features{
+    margin-left: 130px;
+    max-width: 530px;
+}
+
+.feature-title{
+    font-size: 2.8rem;
+    font-weight: 700;
+}
+
+#quick-list{
+    font-weight: 500;
 }
