--- a/assets/style.css
+++ b/assets/style.css
@@ -18,7 +18,9 @@ main > section{
 .display-flex{
     display: flex;
 }
-
+.text-primary{
+    color: #ff900e;
+}
 .text-gray{
     color: #424242;
 }
@@ -40,6 +42,13 @@ main > section{
     font-weight: 600;
     border-radius: 8px;
 }
+
+.section-title{
+    font-size: 2.8rem;
+    font-weight: 700;
+}
+
+
 /* Main styles  */
 
 /* Navbar Related Styles  */
@@ -103,24 +112,43 @@ main > section{
     grid-template-columns: repeat(2, 1fr);
     gap: 24px;
 }
-/* Responsive media query */
 
-@media screen and (max-width: 576px) {
-    .navbar, .nav-link{
-        flex-direction: column;
-    }
-}
 
 .our-features{
     margin-left: 130px;
     max-width: 530px;
 }
 
-.feature-title{
-    font-size: 2.8rem;
-    font-weight: 700;
-}
-
 #quick-list{
     font-weight: 500;
+}
+/* Responsive media query */
+
+@media screen and (max-width: 576px) {
+    .navbar, 
+    .nav-link,
+    .teams{
+        flex-direction: column;
+    }
+
+    .team-img-container{
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .our-features{
+        margin-left: 20px;
+    }
+
+}
+
+/* Medium Size device */
+
+@media screen and (min-width: 576px) and (max-width: 992px) {
+    .teams{
+        flex-direction: column;
+    }
+
+    .our-features{
+        margin-left: 20px auto;
+    }
 }
