--- a/assets/style.css
+++ b/assets/style.css
@@ -122,20 +122,128 @@ main > section{
 #quick-list{
     font-weight: 500;
 }
+
+/* some facts related style */
+
+.facts-container{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+}
+.fact-card{
+    border: 1px solid #ff900e;
+    width: 240px;
+    height: 240px;
+    border-radius: 8px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.fact-number{
+    font-size: 2.8rem;
+    font-weight: 600;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+.fact-name{
+    font-size: 1.25rem;
+    font-weight: 600;
+    margin-top: 10px;
+}
+
+.fact-description{
+    max-width: 540px;
+    margin-bottom: 40px;
+}
+
+
+/* Sponsor Related Styles */
+.sponsor-info{
+    max-width: 540px;
+    margin: 50px auto;
+    text-align: center;
+}
+
+.sponsor-companies{
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+}
+.sponsor-companies img{
+    filter: grayscale(100%);
+}
+
+/* Features sections related styles */
+
+.features{
+    gap: 140px;
+}
+#feature-section-title{
+    border-left: 5px solid #ff900e;
+    padding-left: 20px;
+}
+.feature-card{
+    padding: 30px;
+    box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.06);
+    margin-bottom: 20px;
+    border-radius: 8px;
+}
+.feature-card .feature-title{
+    font-weight: 600;
+    font-size: 1.25rem;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    
+}
+
+#exp-badge{
+    padding: 45px 42px;
+    font-size: 1.5rem;
+    font-weight: 500;
+    margin-left: -100px;
+    margin-top: -100px;
+}
+
+#exp-year{
+    font-size: 4rem;
+    font-weight: 700;
+}
+
+.featured-img img{
+    width: 100%;
+}
+
 /* Responsive media query */
 
 @media screen and (max-width: 576px) {
     .navbar, 
     .nav-link,
+    .features,
     .teams{
         flex-direction: column;
     }
 
-    .team-img-container{
-        grid-template-columns: repeat(1, 1fr);
+    .team-img-container,
+    .facts-container,
+    .sponsor-companies{
+        grid-template-columns: 1fr;
+    }
+
+    .facts-container{
+        justify-items: center;
+        gap: 24px;
     }
 
     .our-features{
+        margin-left: 20px;
+    }
+
+    .sponsor-companies{
+        justify-content: center;
+        gap: 50px;
+    }
+    #exp-badge{
+        margin-top: 20px;
         margin-left: 20px;
     }
 
@@ -144,11 +252,23 @@ main > section{
 /* Medium Size device */
 
 @media screen and (min-width: 576px) and (max-width: 992px) {
-    .teams{
+    .teams, .features{
         flex-direction: column;
     }
 
     .our-features{
         margin-left: 20px auto;
+    }
+
+    .sponsor-companies,
+    .facts-container{
+        grid-template-columns: repeat(2, 1fr);
+        gap: 50px;
+        justify-items: center;
+    }
+
+    #exp-badge{
+        margin-top: 20px;
+        margin-left: 20px;
     }
 }
